replication in progress

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,17 @@
 ---
-# handlers file for .
+- name: restart postgres
+  systemd:
+    name: postgresql
+    daemon_reload: yes
+    state: restarted
+
+- name: stop postgres
+  systemd:
+    name: postgresql
+    state: stopped
+
+- name: startpostgres
+  systemd:
+    name: postgresql
+    daemon_reload: yes
+    state: started
