--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
-postgresql_major_version: 10
+pg_major_version: 10
+
+pg_setup_replication: true
+pg_rep_role_name: rep_user
+pg_data_dir: /etc/postgresql/{{ pg_major_version }}/main
+pg_conf_dir: /etc/postgresql/{{ pg_major_version }}/main
