pg_basebackup working but with hardcoded ip and risk

--- a/tasks/master.yml
+++ b/tasks/master.yml
@@ -8,9 +8,16 @@
   become: true
   become_user: postgres
       
-- name: Allow replication user access in PGHBA
+- name: Allow replication user access in pg_hba.conf
   blockinfile:
     path: "{{ pg_conf_dir }}/pg_hba.conf"
     block: |
       # Replication
-      host    replication       {{ pg_rep_role_name }}          192.168.53.22   trust    
+      host    replication     {{ pg_rep_role_name }}      192.168.53.22/32   trust    
+
+- name: postgresql.conf settings
+  blockinfile:
+    path: "{{ pg_conf_dir }}/postgresql.conf"
+    block: |
+      listen_addresses = '*'
+  notify: "restart postgres"     
